--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.3",
+    "@react-three/fiber": "^8.15.19",
+    "@vitejs/plugin-react": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.2",
-    "wouter": "^2.11.0",
     "react-helmet-async": "^1.3.0",
-    "@vitejs/plugin-react": "^4.0.3"
+    "react-spring": "^9.7.2",
+    "three": "^0.162.0",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "vite": "^4.0.0"
